--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <header>
         <nav>
             <a href="" lang="en" title="logo">WebStudio</a>
-
             <ul>
                 <li>
                     <a href="">Студія</a>
@@ -23,15 +22,25 @@
                 </li>
             </ul>
         </nav>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <ul>
+            <li>
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
+                <a href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+        </ul>
     </header>
     <main>
         <section>
             <h1>Ефективні рішення для вашого бізнесу</h1>
+           <p>
+            <button type="button">Замовити послугу</button>
+           </p>
         </section>
 
         <section>
+            <h2>Переваги</h2>
            <ul>
             <li>
                 <h3>
@@ -74,30 +83,55 @@
            </ul>
         </section>
         <section>
-            <img 
-            src="./images/Чим ми займаємося.jpg" 
-            alt="розробка дизайн"
-            width="1170"
-            height="386">
+            <h2>Чим ми займаємося</h2>
+            <ul>
+                <li><img src="./images/box 1-min.jpg" alt="програмування" width="370" height="294"></li>
+                <li><img src="./images/box 2-min.jpg" alt="розробка" width="370" height="294"></li>
+                <li><img src="./images/box 3-min.jpg" alt="дизайн" width="370" height="294"></li>
+            </ul>
         </section>
+
         <section>
-            <img src="./images/Наша команда-min.jpg" alt="спеціалисти компанії">
+            <h2>Наша команда</h2>
+            <ul>
+                <li> <img src="./images/img 1-min.jpg" alt="Ігор Дем'яненко" width="270" height="260"> 
+                   <h3>Ігор Дем'яненко</h3>
+                   <p lang="en">Product Designer</p>
+                    </li>
+                <li> <img src="./images/img 2-min.jpg" alt="Ольга Рєпіна" width="270" height="260">
+                <h3>Ольга Рєпіна</h3>
+                <p lang="en">Frontend Developer</p>
+                </li>
+                <li> <img src="./images/img 3-min.jpg" alt="Микола Тарасов" width="270" height="260">
+               <h3>Микола Тарасов</h3>
+                    <p ang="en">Marketing</p>
+                </li>
+                <li> <img src="./images/img 4-min.jpg" alt="Миайло Єрмаков" width="270" height="260">
+                <h3>Михайло Єрмаков</h3>
+                    <p lang="en">UI Designer</p>
+                </li>
+            </ul>
         </section>
     </main>
     <footer>
         <a href="" lang="en" title="logo">WebStudio</a>
-<address>
-   <a href="https://goo.gl/maps/9kzKoi3D4WwFBMDS8" target="_blank" rel="noopener noreferrer"
-   >м. Київ, пр-т Лесі Українки, 26</a> 
-   <ul>
-    <li>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-    </li>
-    <li>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
-    </li>
-</ul>  
-</address>
+        <ul>
+            <address>
+                <li>
+                    <h3>
+                        <a href="https://goo.gl/maps/9kzKoi3D4WwFBMDS8" target="_blank" rel="noopener noreferrer"
+                        >м. Київ, пр-т Лесі Українки, 26</a> 
+                </h3>  
+                </li>
+                <li>
+                    <p><a href="mailto:info@devstudio.com">info@devstudio.com</a></p>
+                </li>
+                <li>
+                    <p><a href="tel:+380961111111">+38 096 111 11 11</a></p>
+                </li>
+
+            </address>
+        </ul>
     </footer>
 </body>
 </html>
