--- a/index.html
+++ b/index.html
@@ -8,38 +8,36 @@
 </head>
 <body>
     <header>
-        <nav>
-            <a href="" lang="en" title="logo">WebStudio</a>
-            <ul>
-                <li>
-                    <a href="">Студія</a>
-                </li>
-                <li>
-                    <a href="">Портфоліо</a>
-                </li>
-                <li>
-                    <a href="">Контакти</a>
-                </li>
-            </ul>
-        </nav>
+      <nav>
+        <a href="" lang="en" title="logo">WebStudio</a>
+        <ul>
+            <li> <a href="">Студія</a>
+            </li>
+            <li>
+                 <a href="">Портфоліо</a>
+            </li>
+            <li>
+                 <a href="">Контакти</a>
+            </li>
+        </ul>
         <ul>
             <li>
                 <a href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li>
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
+                 <a href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
+      </nav>
     </header>
     <main>
-        <section>
+      <section>
             <h1>Ефективні рішення для вашого бізнесу</h1>
            <p>
             <button type="button">Замовити послугу</button>
            </p>
         </section>
-
-        <section>
+         <section>
             <h2>Переваги</h2>
            <ul>
             <li>
@@ -84,30 +82,37 @@
         </section>
         <section>
             <h2>Чим ми займаємося</h2>
-            <ul>
-                <li><img src="./images/box 1-min.jpg" alt="програмування" width="370" height="294"></li>
-                <li><img src="./images/box 2-min.jpg" alt="розробка" width="370" height="294"></li>
-                <li><img src="./images/box 3-min.jpg" alt="дизайн" width="370" height="294"></li>
-            </ul>
+            <li>
+                <img src="./images/note.jpg" alt="програмування" width="294" height="370">
+            </li>
+            <li>
+                <img src="./images/phone.jpg" alt="розробка" width="294" height="370">
+            </li>
+            <li>
+                <img src="./images/note.jpg" alt="дизайн" width="294" height="370">
+            </li>
         </section>
-
         <section>
             <h2>Наша команда</h2>
             <ul>
-                <li> <img src="./images/img 1-min.jpg" alt="Ігор Дем'яненко" width="270" height="260"> 
-                   <h3>Ігор Дем'яненко</h3>
-                   <p lang="en">Product Designer</p>
-                    </li>
-                <li> <img src="./images/img 2-min.jpg" alt="Ольга Рєпіна" width="270" height="260">
-                <h3>Ольга Рєпіна</h3>
-                <p lang="en">Frontend Developer</p>
+                <li>
+                    <img src="./images/igor.jpg" alt="Ігор Дем'яненко" width="270" height="260">
+                    <h3>Ігор Дем'яненко</h3>
+                    <p lang="en">Product Designer</p>
                 </li>
-                <li> <img src="./images/img 3-min.jpg" alt="Микола Тарасов" width="270" height="260">
-               <h3>Микола Тарасов</h3>
-                    <p ang="en">Marketing</p>
+                <li>
+                    <img src="./images/olga.jpg" alt="Ольга Рєпіна" width="270" height="260">
+                    <h3>Ольга Рєпіна</h3>
+                    <p lang="en">Frontend Developer</p>
                 </li>
-                <li> <img src="./images/img 4-min.jpg" alt="Миайло Єрмаков" width="270" height="260">
-                <h3>Михайло Єрмаков</h3>
+                <li>
+                    <img src="./images/mykola.jpg" alt="Микола Тарасов" width="270" height="260">
+                    <h3>Микола Тарасов</h3>
+                    <p lang="en">Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/mykhaylo.jpg" alt="Михайло Єрмаков" width="270" height="260">
+                    <h3>Михайло Єрмаков</h3>
                     <p lang="en">UI Designer</p>
                 </li>
             </ul>
@@ -117,17 +122,16 @@
         <a href="" lang="en" title="logo">WebStudio</a>
         <ul>
             <address>
-                <li>
-                        <a href="https://goo.gl/maps/9kzKoi3D4WwFBMDS8" target="_blank" rel="noopener noreferrer"
-                        >м. Київ, пр-т Лесі Українки, 26</a>  
-                </li>
-                <li>
-                    <p><a href="mailto:info@devstudio.com">info@devstudio.com</a></p>
-                </li>
-                <li>
-                    <p><a href="tel:+380961111111">+38 096 111 11 11</a></p>
-                </li>
-
+            <li>
+                <p>
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </p>  
+            </li>
+            <li>
+                <p>
+                    <a href="tel:+380961111111">+38 096 111 11 11</a>
+                </p>
+            </li>
             </address>
         </ul>
     </footer>
